// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Speaker />  <Speaker /> should match the snapshot 1`] = `
<div>
  <button>
    Speak
  </button>
  <div />
</div>
`;

exports[`<Speaker />  <Speaker /> should match the snapshot with a message 1`] = `
<div>
  <button>
    Speak
  </button>
  <div>
    hello
  </div>
</div>
`;
